--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,7 @@ p {
 .hero {
     height: 800px;
     width: 100%;
+    margin-top: 25px;
     margin-bottom: 25px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
