--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,10 +51,11 @@ p {
 }
 
 .hero {
-    height: 800px;
+    height: 780px;
     width: 100%;
     margin-top: 25px;
     margin-bottom: 25px;
+    margin-left: 20px;
     background-image: url("../images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
